Updated README, fixed layout issue on index page, added User credential dropdown to index page.

--- a/resumes/res_app/static/res_app/css/index.css
+++ b/resumes/res_app/static/res_app/css/index.css
@@ -58,3 +58,19 @@ footer.black-footer {
 .w-70 {
   width: 70%;
 }
+
+.mt-0 {
+  margin-top: 0rem;
+}
+.mt-1 {
+  margin-top: 1rem;
+}
+.mt-2 {
+  margin-top: 2rem;
+}
+.mt-3 {
+  margin-top: 3rem;
+}
+.mt-4 {
+  margin-top: 4rem;
+}
